Typo fix in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
 <body>
 	<h1>Spotlight Example</h1>
 	<p>
-		This is an example if bringing up a spotlight overlay, and creating
+		This is an example of bringing up a spotlight overlay, and creating
 		a few absolute lights, along with some relative lights, which should
 		follow the position of their respective HTML elements.<br /><br />
 		<button id="start-demo" onclick="startDemo();">Click here to see a demo</button>
