--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -35,7 +35,7 @@
 	</p>
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<script src="spotlight.js"></script>
+	<script src="../spotlight.js"></script>
 	
 	<script>
 		var overlay = Spotlight.createOverlay('tutorial-1', {
